# octave-wagenaarlab

./: .bzrignore  .gitignore  PKG_ADD  PKG_DEL  README.md  dw_lab_mexall.m
basicx/: asize.m  call.m  clip01.m  dateadd.m  datesub.m  dbg.m  ddetrend.m  div.m  dpolyarea.m  drop.m  dsqueeze.m  equal.m  getopt.m  invperm.m  isnvector.m  lin.m  lumen2candela.m  num2thou.m  powspec.m  repmatto.m  roll.m  savestruct.m  select.m  structcat.m  structcut.m  subset.m  ternary.m  timesub.m  unshape.m  vl1924e.txt
blobroi/: Contents.m  blobroi_click.m  blobroi_create.m  blobroi_unclick.m  blobroitest.m
cntc/: findgears.m  gearcalc.m
colorx/: cielabdist.m  cielchdist.m  colorconvert.m  distinctcolors.m  djet.m  grayred.m  hotpow2.m  lchdemo.m  resistor.m  whitepointd.m
ellipse/: Contents.m  elbuild_xyrra.m  eldc_test.m  eldn_test.m  eldrag_new.m  eldrag_resize.m  elfill.m  elfind_nearest.m  elparallel.m  elplot_xyrra.m
ellipticroi/: Contents.m  bestalign.m  colorpicker.m  extractellipticrois.m  extractshiftedavgs.m  iaq2elps.m  imageellipses.m  inellipse.m  insideborder.m  makeshift.m  outsideborder.m  pickellipse.m  placealign.m  rbaltellipse.m  rbellipse.m  shiftellipticroi.m  showellipses.m  smoothroi.m  twoimagebw.m  weighalign.m
ephys/: dumbspike.m  dw_ephys_mexall.m  joinspikes.m  latency.m  mea2chronux.m  nextntrode_core.C  refractoryspike.m  spiketemplate.m  ss_clusterdist.m  ss_confusion.m  ss_demo.m  (+5 more)
salpa/private/c++-version/: CyclBuf.H  Defs.H  Error.H  EventReporter.H  LocalFit.C  Makefile.am  NoiseLevels.H  SOLocalFit.H  StreamLF.C  posthocartifilt.C  salpa.C
(+2409 files in other folders)
